--- a/코딩테스트/크기가 작은 부분 문자열.md
+++ b/코딩테스트/크기가 작은 부분 문자열.md
@@ -1,3 +1,6 @@
+# 코딩테스트 연습 > 연습문제 > 크기가 작은 부분 문자열
+
+
 ### **문제 설명**
 
 숫자로 이루어진 문자열 `t`와 `p`가 주어질 때, `t`에서 `p`와 길이가 같은 부분문자열 중에서, 이 부분문자열이 나타내는 수가 `p`가 나타내는 수보다 작거나 같은 것이 나오는 횟수를 return하는 함수 solution을 완성하세요.
