--- a/코딩테스트/타겟 넘버.md
+++ b/코딩테스트/타겟 넘버.md
@@ -105,3 +105,47 @@ queue = [8, 6, 4, 2, 6, 4, 2, 0, 0, -2, -4, -6, -2, -4, -6, -8]
 ```java
 int answer = Collections.frequency(queue, 4) // 개수는 2가 나옵니다.
 ```
+
+### 🔎 다른 사람의 풀이
+
+```java
+class Solution {
+    public int solution(int[] numbers, int target) {
+        int answer = 0;
+        answer = dfs(numbers, 0, 0, target);
+        return answer;
+    }
+    int dfs(int[] numbers, int n, int sum, int target) {
+        if(n == numbers.length) {
+            if(sum == target) {
+                return 1;
+            }
+            return 0;
+        }
+        return dfs(numbers, n + 1, sum + numbers[n], target) + dfs(numbers, n + 1, sum - numbers[n], target);
+    }
+}
+```
+
+dfs를 이용하고 재귀함수를 이용한 것으로 판단이됨. 아래 코드를 보면 재귀함수가 멈춰야될 시점과 count를 증가 시키는 시점이 분명하게 명시되어 있음.
+
+```java
+if(n == numbers.length) {
+    if(sum == target) {
+        return 1;
+    }
+    return 0;
+}
+```
+
+n이 numbers.length와 동일하다는 것은 numbers의 모든 요소를 한 번씩 다 탐색했다는 것을 의미하고, 그때의 sum이 target과 같다면 1을 반환하고, 아니라면 0을 반환하라는 코드이다.
+
+```java
+return dfs(numbers, n + 1, sum + numbers[n], target) + dfs(numbers, n + 1, sum - numbers[n], target);
+```
+
+numbers는 그대로 가져가고 `n + 1`은 다음 노드를 탐색을 시작하기 위한 인자이고, `sum + numbers[n]`과`sum - numbers[n]` 은 sum에 이번에 탐색한 n에 해당하는 값을 더하고, 뺀 값을 적용한 것을 의미한다.
+
+대단하군….동시에 두 개의 흐름(+4일때와 -4일 때의 흐름)을 모두 탐색할 수 있는 방법이라고 생각된다.
+
+<img width="568" alt="image" src="https://user-images.githubusercontent.com/70641477/210310910-bfed24e3-5f68-4c0b-ac53-e6908b6ae6a0.png">
