Update 큰 수 만들기.md

--- a/코딩테스트/큰 수 만들기.md
+++ b/코딩테스트/큰 수 만들기.md
@@ -156,7 +156,7 @@ class Solution {
 - number에 있는 수를 차례대로 뽑으면서 Stack에 push() 할건데 다음과 같은 기준이 있다.
     - stack이 일단 비어있지 않고 `!stack.isEmpty()`
     - stack에서 뽑은(peek) 수가 number에서 뽑은 수 보다 작고 `stack.peek() < c`
-    - k에서 -1을 한 것이 양수여야 한다. `제거가능한 숫자가 0 이상이 돼야한다.`
+    - k가 양수여야 한다. `제거가능한 숫자가 0 이상이 돼야한다.` -> `k--`는 후치 연산자이기 때문에 k를 먼저 비교하고 작동됨
 - 간단한 예시로 한번 생각해보자
     
     ```java
